Updated Readme
added instructions for cloning and running the code