@@ -1,1 +1,28 @@
 # PSA_Final_Project
+
+# The Travelling salesman Problem
+Trying to find the shortest possile route of visiting all the cities exactly once and returning to the starting city
+
+**Team**
+
+1) Mani Charan Reddy Loka (NUID 002727403)
+2) Nishaanth Reddy Tummalapalli (NUID 002707338)
+3) Prashant Vobilishetty (NUID 002707220)
+
+**Instructions for cloning and running the code**
+
+1) Clone the repository using the command: git clone https://github.com/manicharan/PSA_Final_Project.git
+2) Open PSA_Final_Project\src\main\java\travellingsalesman\TSP.java and run the application
+
+**Instructions for running the UI**
+
+1) Add Maven dependencies for JavaFX
+2) Download the JavaFX library from https://gluonhq.com/products/javafx/ to local folder
+3) Add the VM Argument --module-path "path to lib here" --add-modules=javafx.controls
+4) Open PSA_Final_Project\src\main\java\travellingsalesman\UI and run the application
+
+**Technologies involved**
+1) Java for Backend
+2) Maven for Dependency Management
+3) JavaFX for UI
+4) JUnit for Unit Tests
